--- a/src/verit/Makefile
+++ b/src/verit/Makefile
@@ -2,7 +2,11 @@
 all :
 	ocamllex veritLexer.mll       
 	menhir --explain veritParser.mly 
-	ocamlc -c veritParser.mli
-	ocamlc -c veritLexer.ml
+	ocamlc -c -rectypes veritParser.mli
+	ocamlc -c -rectypes veritLexer.ml
 
-.PHONY: all
+clean :
+	rm -f veritLexer.cmo
+	rm -f veritParser.mli
+
+.PHONY: all clean
