--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@
 *.cmti
 *.vt*log
 examples/lia.cache
+unit-tests/lia.cache
+unit-tests/NTests_verit.cmi
+unit-tests/NTests_verit.cmx
+unit-tests/NTests_verit.cmxs
+unit-tests/NTests_verit.native
+unit-tests/NTests_verit.o
+unit-tests/Tests_verit.glob
+unit-tests/Tests_verit.vo
 src/Makefile
 src/Misc.glob
 src/Misc.v.d
